--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,6 +8,11 @@
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 	
+	<context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/xmlConfig/globalApplication.xml</param-value>
+    </context-param>
+	
 	<listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
