--- a/ben/demo/DemoConsumer/pom.xml
+++ b/ben/demo/DemoConsumer/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.ben</groupId>
     <artifactId>DemoConsumer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
 
@@ -63,6 +63,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>4.3.14.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>3.1</version>
         </dependency>
     </dependencies>
 
