--- a/ben/demo/DemoProvider/pom.xml
+++ b/ben/demo/DemoProvider/pom.xml
@@ -15,6 +15,12 @@
         </dependency>
 
         <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>4.0.12</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
             <version>2.5.10</version>
