--- a/ben/demo/DemoWeb/pom.xml
+++ b/ben/demo/DemoWeb/pom.xml
@@ -27,7 +27,7 @@
         </dependency>
         <dependency>
             <groupId>cn.ben</groupId>
-            <artifactId>DemoCommon</artifactId>
+            <artifactId>DemoConsumer</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
