--- a/ben/demo/DemoConsumer/pom.xml
+++ b/ben/demo/DemoConsumer/pom.xml
@@ -7,6 +7,7 @@
     <groupId>cn.ben</groupId>
     <artifactId>DemoConsumer</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
 
