--- a/ben/demo/DemoCommon/pom.xml
+++ b/ben/demo/DemoCommon/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.ben</groupId>
     <artifactId>DemoCommon</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
 </project>
