--- a/ben/demo/DemoWeb/src/main/webapp/WEB-INF/web.xml
+++ b/ben/demo/DemoWeb/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:applicationContext.xml</param-value>
+        <param-value>classpath:META-INF/spring/applicationContext.xml</param-value>
     </context-param>
 
     <listener>
