--- a/ben/demo/pom.xml
+++ b/ben/demo/pom.xml
@@ -2,19 +2,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <groupId>cn.ben</groupId>
+
+    <parent>
+        <groupId>cn.ben</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+
+
     <artifactId>demo</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <description>demo</description>
     <modelVersion>4.0.0</modelVersion>
-	
+
     <modules>
         <module>DemoCommon</module>
         <module>DemoConsumer</module>
+        <module>DemoEmbedWeb</module>
         <module>DemoProvider</module>
         <module>DemoWeb</module>
-		
     </modules>
 
 
