--- a/ben/webApp/src/main/webapp/WEB-INF/web.xml
+++ b/ben/webApp/src/main/webapp/WEB-INF/web.xml
@@ -4,5 +4,11 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
              http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-  <display-name>Archetype Created Web Application</display-name>
+    <display-name>webApp</display-name>
+
+    <servlet>
+        <servlet-name>SpringMVC</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    </servlet>
+
 </web-app>
