--- a/ben/test/pom.xml
+++ b/ben/test/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-core</artifactId>
-            <version>1.4.0-SNAPSHOT</version>
+            <version>1.3.2</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
