--- a/ben/springBoot/pom.xml
+++ b/ben/springBoot/pom.xml
@@ -20,6 +20,7 @@
     <modules>
         <module>springBootAdmin</module>
         <module>springSecurity</module>
+        <module>ureport</module>
     </modules>
 
     <dependencies>
