--- a/ben/springBoot/pom.xml
+++ b/ben/springBoot/pom.xml
@@ -18,6 +18,7 @@
         <java.version>1.8</java.version>
     </properties>
     <modules>
+        <module>boot</module>
         <module>springBootAdmin</module>
         <module>springSecurity</module>
         <module>ureport</module>
