--- a/ben/springBoot/boot/src/main/resources/application.properties
+++ b/ben/springBoot/boot/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=123456
 logging.level.root=info
 mybatis.type-aliases-package=com.ben.boot.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
+server.ssl.enabled=true
