--- a/ben/springBoot/simple-shiro/src/main/resources/application.properties
+++ b/ben/springBoot/simple-shiro/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.root=debug
+logging.level.root=info
 logging.level.org.eclipse.jetty=info
 logging.level.sun.rmi=info
 logging.level.org.springframework=info
