--- a/ben/springBoot/springSecurity/src/main/resources/application.properties
+++ b/ben/springBoot/springSecurity/src/main/resources/application.properties
@@ -8,7 +8,7 @@ management.endpoint.health.show-details=always
 logging.level.root=info
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mytest?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/ds0?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.security.user.password=123456
 spring.main.banner-mode=off
