--- a/ben/test/pom.xml
+++ b/ben/test/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.54</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+          <version>2.6</version>
+        </dependency>
 
         <!-- kafka -->
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
@@ -75,6 +80,11 @@
             <artifactId>spring-context</artifactId>
             <version>5.1.6.RELEASE</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.12</version>
         </dependency>
 
     </dependencies>
