--- a/ben/springBoot/message/pom.xml
+++ b/ben/springBoot/message/pom.xml
@@ -11,7 +11,6 @@
     <groupId>com.ben.springboot</groupId>
     <artifactId>message</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <message>message</message>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -21,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -33,6 +32,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
         </dependency>
     </dependencies>
 
